--- a/plutus-tutorial/doc/plutus-tx.adoc
+++ b/plutus-tutorial/doc/plutus-tx.adoc
@@ -97,6 +97,7 @@ import Language.PlutusTx.Prelude -- <.>
 <.> Main Plutus Tx module.
 <.> Additional support for lifting.
 <.> Builtin functions.
+<.> The Plutus Tx Prelude, discussed further below.
 <.> Setup for doctest examples.
 
 Here’s the most basic program we can write: one that just evaluates to
@@ -190,9 +191,9 @@ This is usually necessary for non-local functions to
 be usable in Plutus Tx blocks, as it instructs GHC to keep the
 information that the Plutus Tx compiler needs. While you may be able
 to get away with omitting it, it is good practice to always include it.
-<.> Local functions do not need to be marked as `INLINABLE`.
 <.> `addInteger` comes from `Language.PlutusTx.Builtins`, and is
 mapped to the builtin integer addition function in Plutus Core.
+<.> Local functions do not need to be marked as `INLINABLE`.
 <.> We’ve used the CK evaluator for Plutus Core to evaluate the program
 and check that the result was what we expected
 
@@ -300,6 +301,11 @@ called _lifting_. Lifting makes it easy to use the same types
 both inside your Plutus Tx program and in the external code that uses
 it.
 
+NOTE: When we talk about "runtime" here, we mean the runtime of the main Haskell
+program, *not* when the Plutus Core runs on the chain. We want to configure
+our code when the main Haskell program runs, as that is when we will be getting
+user input.
+
 As a very simple example, let’s write an add-one
 function.
 
@@ -323,6 +329,17 @@ addOneToN n =
     unsafeLiftCode n -- <.>
 
 {- |
+>>> pretty $ getPlc addOne
+(program 1.0.0
+  [
+    (lam
+      addInteger
+      (fun (con integer) (fun (con integer) (con integer)))
+      (lam ds (con integer) [ [ addInteger ds ] (con 1) ])
+    )
+    (builtin addInteger)
+  ]
+)
 >>> let program = getPlc $ addOneToN 4
 >>> pretty program
 (program 1.0.0
